--- a/tti2sdk/src/main/AndroidManifest.xml
+++ b/tti2sdk/src/main/AndroidManifest.xml
@@ -13,6 +13,11 @@
             android:screenOrientation="portrait"
             android:exported="true"/>
 
+        <activity
+            android:name=".ui.avatar.AvatarActivity"
+            android:screenOrientation="portrait"
+            android:exported="true"/>
+
     </application>
 
 </manifest>
