--- a/tti2sdk/build.gradle
+++ b/tti2sdk/build.gradle
@@ -46,6 +46,7 @@ android {
     buildFeatures{
         viewBinding = true
     }
+
 }
 
 dependencies {
@@ -73,5 +74,8 @@ dependencies {
     //Stetho -
     implementation 'com.facebook.stetho:stetho:1.5.1'
     implementation 'com.facebook.stetho:stetho-okhttp3:1.5.1'
+
+    //Lottie animation
+    implementation "com.airbnb.android:lottie:5.0.3"
 
 }
