--- a/tti2sdk/src/main/AndroidManifest.xml
+++ b/tti2sdk/src/main/AndroidManifest.xml
@@ -10,13 +10,15 @@
 
         <activity
             android:name=".ui.home.HomeActivity"
+            android:exported="true"
             android:screenOrientation="portrait"
-            android:exported="true"/>
+             />
 
         <activity
             android:name=".ui.avatar.AvatarActivity"
+            android:exported="true"
             android:screenOrientation="portrait"
-            android:exported="true"/>
+             />
 
     </application>
 
