--- a/tti2sdk/build.gradle
+++ b/tti2sdk/build.gradle
@@ -19,20 +19,17 @@ android {
     buildTypes {
         release {
             minifyEnabled false
-            shrinkResources false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             buildConfigField "String", "BASE_URL", "\"https://private-a62c16-hivedeliveryapptour.apiary-mock.com/\""
         }
         debug{
             debuggable true
             minifyEnabled false
-            shrinkResources false
             buildConfigField "String", "BASE_URL", "\"https://private-a62c16-hivedeliveryapptour.apiary-mock.com/\""
         }
         api{
             debuggable true
             minifyEnabled false
-            shrinkResources false
             buildConfigField "String", "BASE_URL", "\"https://private-a62c16-hivedeliveryapptour.apiary-mock.com/\""
         }
     }
@@ -64,9 +61,12 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
     // Koin for Android
-    implementation "org.koin:koin-android:2.2.2"
-    implementation "org.koin:koin-android-scope:2.2.2"
-    implementation "org.koin:koin-android-viewmodel:2.2.2"
+    implementation 'org.koin:koin-androidx-fragment:2.1.5'
+    implementation 'org.koin:koin-androidx-scope:2.1.5'
+    implementation 'org.koin:koin-androidx-viewmodel:2.1.5'
+    implementation 'org.koin:koin-androidx-ext:2.1.5'
+    implementation 'org.koin:koin-core:2.1.5'
+    implementation 'org.koin:koin-test:2.1.5'
 
     // MultiDex
     implementation 'androidx.multidex:multidex:2.0.1'
@@ -77,5 +77,9 @@ dependencies {
 
     //Lottie animation
     implementation "com.airbnb.android:lottie:5.0.3"
+
+    // ViewModel
+    //implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
+   // implementation "org.koin:koin-android-viewmodel:2.2.2"
 
 }
