--- a/tti2sdk/src/main/AndroidManifest.xml
+++ b/tti2sdk/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:name=".di.Application"
@@ -11,14 +12,21 @@
         <activity
             android:name=".ui.home.HomeActivity"
             android:exported="true"
-            android:screenOrientation="portrait"
-             />
+            android:screenOrientation="portrait" />
 
         <activity
             android:name=".ui.avatar.AvatarActivity"
             android:exported="true"
-            android:screenOrientation="portrait"
-             />
+            android:screenOrientation="portrait" />
+
+        <provider
+            android:name="androidx.startup.InitializationProvider"
+            android:authorities="${applicationId}.androidx-startup"
+            android:exported="false"
+            tools:node="merge">
+            <meta-data android:name="app.rive.runtime.kotlin.RiveInitializer"
+                android:value="androidx.startup" />
+        </provider>
 
     </application>
 
