--- a/tti2sdk/build.gradle
+++ b/tti2sdk/build.gradle
@@ -25,7 +25,11 @@ android {
         debug{
             debuggable true
             minifyEnabled false
-            buildConfigField "String", "BASE_URL", "\"http://lx-prp-idn-tti-external-ws-tc-01.timwe.com:8081/webapp-dap-id-telkomsel-tti-app/tti/\""
+            // com vpn
+            // buildConfigField "String", "BASE_URL", "\"http://lx-prp-idn-tti-external-ws-tc-01.timwe.com:8081/webapp-dap-id-telkomsel-tti-app/tti/\""
+
+            // sem vpn
+            buildConfigField "String", "BASE_URL", "\"https://qua-telkomsel-dap.timwe.com/webapp-dap-id-telkomsel-tti-app/tti/\""
         }
         api{
             debuggable true
