--- a/tti2sdk/src/main/AndroidManifest.xml
+++ b/tti2sdk/src/main/AndroidManifest.xml
@@ -11,6 +11,11 @@
         android:usesCleartextTraffic="true">
 
         <activity
+            android:name=".ui.splash.SplashActivity"
+            android:exported="true"
+            android:screenOrientation="portrait" />
+
+        <activity
             android:name=".ui.home.HomeActivity"
             android:exported="true"
             android:screenOrientation="portrait" />
