--- a/tti2sdk/build.gradle
+++ b/tti2sdk/build.gradle
@@ -48,6 +48,13 @@ android {
         viewBinding = true
     }
 
+    dexOptions {
+        incremental true
+        javaMaxHeapSize "4g"
+        preDexLibraries true
+        dexInProcess = true
+    }
+
 }
 
 dependencies {
@@ -82,6 +89,9 @@ dependencies {
 
     // ViewModel
     implementation 'org.koin:koin-androidx-viewmodel:2.1.5'
+
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
 
     //Rive
     implementation 'app.rive:rive-android:4.0.0'
