Added structure views (team, missions, prizes)

--- a/tti2sdk/src/main/AndroidManifest.xml
+++ b/tti2sdk/src/main/AndroidManifest.xml
@@ -25,6 +25,21 @@
             android:exported="true"
             android:screenOrientation="portrait" />
 
+        <activity
+            android:name=".ui.missions.MissionsActivity"
+            android:exported="true"
+            android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".ui.team.TeamActivity"
+            android:exported="true"
+            android:screenOrientation="portrait"/>
+
+        <activity
+            android:name=".ui.prizes.PrizesActivity"
+            android:exported="true"
+            android:screenOrientation="portrait"/>
+
         <provider
             android:name="androidx.startup.InitializationProvider"
             android:authorities="${applicationId}.androidx-startup"
