--- a/tti2sdk/build.gradle
+++ b/tti2sdk/build.gradle
@@ -36,7 +36,7 @@ android {
         api{
             debuggable true
             minifyEnabled false
-            buildConfigField "String", "BASE_URL", "\"https://private-a62c16-hivedeliveryapptour.apiary-mock.com/\""
+            buildConfigField "String", "BASE_URL", "\"https://private-27cbb-tti2.apiary-mock.com/\""
             buildConfigField "String", "SDK_VERSION_CODE", "\"1.0.0\""
         }
     }
