feature / daily-checkups

--- a/tti2sdk/src/main/AndroidManifest.xml
+++ b/tti2sdk/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:name=".di.Application"
         android:allowBackup="true"
         android:largeHeap="true"
-        android:hardwareAccelerated="false"
+        android:hardwareAccelerated="true"
         android:usesCleartextTraffic="true" >
 
         <activity
