--- a/tti2sdk/src/main/AndroidManifest.xml
+++ b/tti2sdk/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
             android:screenOrientation="portrait" />
 
         <activity
-            android:name=".ui.team.LeaderBoardActivity"
+            android:name=".ui.board.LeaderBoardActivity"
             android:exported="true"
             android:screenOrientation="portrait"/>
 
