added destination structure

--- a/tti2sdk/src/main/AndroidManifest.xml
+++ b/tti2sdk/src/main/AndroidManifest.xml
@@ -49,6 +49,11 @@
             android:exported="true"
             android:screenOrientation="portrait"/>
 
+        <activity
+            android:name=".ui.destinations.DestinationActivity"
+            android:exported="true"
+            android:screenOrientation="portrait"/>
+
         <provider
             android:name="androidx.startup.InitializationProvider"
             android:authorities="${applicationId}.androidx-startup"
