--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,8 @@ buildscript {
     repositories {
         google()
         mavenCentral()
-        maven {url "https://plugins.gradle.org/m2/"}
+        maven { url "https://plugins.gradle.org/m2/"}
+        //maven { url 'https://jitpack.io' }
         jcenter()
     }
 
