--- a/tti2sdk/build.gradle
+++ b/tti2sdk/build.gradle
@@ -103,4 +103,7 @@ dependencies {
     //DataStore
     implementation "androidx.datastore:datastore-preferences:1.0.0"
 
+    //DotIndicator
+    implementation "com.tbuonomo:dotsindicator:4.3"
+
 }
