--- a/tti2sdk/build.gradle
+++ b/tti2sdk/build.gradle
@@ -93,8 +93,10 @@ dependencies {
     // ViewModel
     implementation 'org.koin:koin-androidx-viewmodel:2.1.5'
 
-    //Glide
+    //Load Images
     implementation 'com.github.bumptech.glide:glide:4.11.0'
+    implementation("io.coil-kt:coil:0.12.0")
+    implementation("io.coil-kt:coil-svg:0.12.0")
 
     //Rive
     implementation 'app.rive:rive-android:4.3.2'
