--- a/tti2sdk/build.gradle
+++ b/tti2sdk/build.gradle
@@ -51,12 +51,12 @@ android {
         viewBinding = true
     }
 
-    dexOptions {
-        incremental true
-        javaMaxHeapSize "4g"
-        preDexLibraries true
-        dexInProcess = true
-    }
+//    dexOptions {
+//        incremental true
+//        javaMaxHeapSize "4g"
+//        preDexLibraries true
+//        dexInProcess = true
+//    }
 
 }
 
@@ -106,6 +106,6 @@ dependencies {
     implementation "androidx.datastore:datastore-preferences:1.0.0"
 
     //DotIndicator
-    implementation "com.tbuonomo:dotsindicator:4.3"
+    implementation "com.tbuonomo:dotsindicator:4.2"
 
 }
