--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,14 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+ext {
+    kotlin_version = 1.8
+}// Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = '1.6.10'
+    ext.kotlin_version = 1.8
 
     repositories {
         google()
         mavenCentral()
         maven { url "https://plugins.gradle.org/m2/"}
-        //maven { url 'https://jitpack.io' }
+        maven { url 'https://jitpack.io' }
         jcenter()
     }
 
@@ -17,7 +19,13 @@ buildscript {
 }
 
 allprojects {
-
+    repositories {
+        google()
+        mavenCentral()
+        maven { url "https://plugins.gradle.org/m2/"}
+        maven { url "https://jitpack.io" }
+        jcenter()
+    }
 }
 
 task clean(type: Delete) {
