--- a/tti2sdk/build.gradle
+++ b/tti2sdk/build.gradle
@@ -5,7 +5,6 @@ plugins {
 }
 
 android {
-    namespace 'com.timwe.tti2sdk'
     compileSdk 33
 
     defaultConfig {
@@ -14,6 +13,7 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
+        multiDexEnabled false
     }
 
     buildTypes {
@@ -62,16 +62,19 @@ android {
 
 dependencies {
 
+    implementation 'com.android.support:multidex:1.0.0'
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
-    implementation 'androidx.core:core-ktx:+'
+    //implementation 'androidx.core:core-ktx:+'
+    implementation 'androidx.core:core-ktx:1.3.2'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0'
     implementation 'androidx.recyclerview:recyclerview:1.3.0'
     implementation 'androidx.recyclerview:recyclerview-selection:1.1.0'
+//    implementation 'org.jetbrains.kotlinx:kotlinx-datetime:0.4.0'
 
     // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
@@ -91,6 +94,7 @@ dependencies {
     implementation "com.airbnb.android:lottie:5.0.3"
 
     // ViewModel
+//    implementation 'org.koin:koin-android:2.1.5'
     implementation 'org.koin:koin-androidx-viewmodel:2.1.5'
 
     //Load Images
@@ -105,5 +109,7 @@ dependencies {
 
     //DotIndicator
     implementation "com.tbuonomo:dotsindicator:4.2"
+
+    implementation("org.jetbrains.kotlin:kotlin-stdlib: 1.4.30")
 
 }
