--- a/tti2sdk/src/main/AndroidManifest.xml
+++ b/tti2sdk/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" android:maxSdkVersion="18"/>
 
     <application
-        android:name=".di.Application"
+        android:name=".di.MyApplication"
         android:allowBackup="true"
         android:largeHeap="true"
         android:hardwareAccelerated="true"
