--- a/tti2sdk/build.gradle
+++ b/tti2sdk/build.gradle
@@ -51,12 +51,12 @@ android {
         viewBinding = true
     }
 
-    dexOptions {
-        incremental true
-        javaMaxHeapSize "4g"
-        preDexLibraries true
-        dexInProcess = true
-    }
+//    dexOptions {
+//        incremental true
+//        javaMaxHeapSize "4g"
+//        preDexLibraries true
+//        dexInProcess = true
+//    }
 
 }
 
@@ -65,7 +65,7 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
-    implementation 'androidx.core:core-ktx:1.3.2'
+//    implementation 'androidx.core:core-ktx:1.3.2'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
